css/footer.css
.footer-link {
  text-decoration: none !important;
  color: white !important;
  font-size: clamp(1rem, 1.25rem, 2rem);
  font-weight: 600;
}

footer a::after {
  background-color: white !important;
}

footer {
  background: #121427;
  color: white;
}

.footer {
  height: fit-content;
}

.footer-title {
  font-size: clamp(2rem, 2.5rem, 3rem);
  color: white;
  margin-top: 0 !important;
}

.footer-address {
  font-size: clamp(1rem, 1rem, 1.5rem);
}

.footer-logo {
  height: 15vh;
}

.footer-nav {
  display: flex;
  text-align: center;
  justify-content: center;
  align-items: center;
}

.footer-email-social {
  width: 75%;
}

.footer-social {
  font-size: 2rem;
}

.footer-social a {
  color: white;
}
.copyright-text {
  margin: 10px 0px;
  opacity: 0.7;
}
.footer-btn {
  background-color: #c1ecff;
  color: var(--dark-color);
  border: none;
  padding: 8px 16px;
  flex-grow: 1;
  border-radius: 3px;
  border: 1px solid;
}
.footer-btn:hover {
  background-color: #ffa4d5;
}
#mce-EMAIL {
  padding: 8px 0px;
  flex-grow: 1;
  width: 50%;
}
@media screen and (max-width: 991px) {
  .footer-nav {
    display: none;
  }

  footer {
    text-align: center !important;
  }
  #mc_embed_signup {
    display: none !important;
  }
  .footer-social > * {
    padding-left: 0 !important;
    padding-right: 0 !important;
  }  
}

